<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CustomHUDDemo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M3M-fD-TdH">
                                <rect key="frame" x="94" y="259" width="200" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Ddt-jw-OFD"/>
                                    <constraint firstAttribute="width" constant="200" id="LCq-LP-h1K"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="顯示 LoadView"/>
                                <connections>
                                    <action selector="showLoadView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mLg-09-0uq"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulm-ue-rqY">
                                <rect key="frame" x="94" y="304" width="200" height="40"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="顯示成功"/>
                                <connections>
                                    <action selector="showSuccessView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rlm-DJ-tPl"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6c-qS-J5s">
                                <rect key="frame" x="94" y="352" width="200" height="40"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="顯示失敗"/>
                                <connections>
                                    <action selector="showErrorView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jul-f1-EAh"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="ulm-ue-rqY" firstAttribute="height" secondItem="M3M-fD-TdH" secondAttribute="height" id="5om-OI-kKO"/>
                            <constraint firstItem="H6c-qS-J5s" firstAttribute="top" secondItem="ulm-ue-rqY" secondAttribute="bottom" constant="8" id="FRt-RR-5S4"/>
                            <constraint firstItem="ulm-ue-rqY" firstAttribute="width" secondItem="M3M-fD-TdH" secondAttribute="width" id="Qlh-aC-3Jx"/>
                            <constraint firstItem="H6c-qS-J5s" firstAttribute="width" secondItem="M3M-fD-TdH" secondAttribute="width" id="Rj2-E5-P26"/>
                            <constraint firstItem="ulm-ue-rqY" firstAttribute="centerX" secondItem="M3M-fD-TdH" secondAttribute="centerX" id="TWN-n4-TmX"/>
                            <constraint firstItem="H6c-qS-J5s" firstAttribute="height" secondItem="M3M-fD-TdH" secondAttribute="height" id="YNq-qH-0P3"/>
                            <constraint firstItem="ulm-ue-rqY" firstAttribute="top" secondItem="M3M-fD-TdH" secondAttribute="bottom" constant="5" id="aFL-jx-Uv6"/>
                            <constraint firstItem="H6c-qS-J5s" firstAttribute="centerX" secondItem="ulm-ue-rqY" secondAttribute="centerX" id="v8C-al-rWW"/>
                            <constraint firstItem="M3M-fD-TdH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="94" id="xa6-rF-Ta6"/>
                            <constraint firstItem="M3M-fD-TdH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="yST-G7-Lae"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="24" y="-27"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
